Adicionei um Paragrafo
Só pra testar e aprender

--- a/site teste/teste.html
+++ b/site teste/teste.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Testando site do GitHub</h1>
   <hr>
-  <p>Testando e aprendo na hora e ao vivo com as aulas do Professor Gustavo Guanabara</p>  
+  <p>Testando e aprendo na hora e ao vivo com as aulas do Professor Gustavo Guanabara</p>
+  <p>Cada aula aprendendo mais e cada vez melhor</p>  
 </body>
 </html>
